	PR c++/63415 	* pt.c (value_dependent_expression_p) [CONSTRUCTOR]: Check the type. 	(iterative_hash_template_arg): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@216043 138bc75d-0d04-0410-961f-82ee72b054a4